--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ body
     transform-style: preserve-3d;
     transition: transform  0.05s linear;
 }
+.thumb
+{
+    background: url("https://marcuslirio.github.io/Paralax/rachel2.png");
+}
 .card  .thumb
 {
     background-size: cover;
